feat(enhancement): add check port or lock, balance api handlers
